Bug 182858 - digiKam becomes unusable when removing a collection that is part of a "Find Duplicates" search result
Summary: digiKam becomes unusable when removing a collection that is part of a "Find D...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Similarity (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-02 13:05 UTC by Andi Clemens
Modified: 2012-06-27 11:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments
many tasks opened after collection removal (198.90 KB, image/png)
2009-02-02 13:06 UTC, Andi Clemens
Details
error log (488.03 KB, text/plain)
2009-02-05 23:40 UTC, Andi Clemens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2009-02-02 13:05:58 UTC
Version:           0.10.0-rc2 (using 4.2.00 (KDE 4.2.0), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.28-ARCH

I removed a collection (in digiKam's collection setup, not physically) and restarted the application.
The start-up took nearly 2 minutes. After digiKam was loaded, all image thumbnails flickered like crazy and where "jumping" around as I hovered over with the mouse cursor.

Opening htop revealed that digiKam has started over 1000 tasks! After a while digiKam crashed completely and I restarted again, but no luck.
I even restarted my machine, still the same issue.

After a while I realized that the collection was part of a "Find Duplicates" search result and that digiKam tried to scan those files all the time, although the collection was removed from the setup.
The only solution was to eliminate the search from the database:

DELETE FROM Searches WHERE type == 7;

After removing those entries, digiKam started normally again.
We need to make sure that removing a collection updates the "Find Duplicates" search result, otherwise you are not able to work with digiKam or your computer anymore.

Andi Clemens
Comment 1 Andi Clemens 2009-02-02 13:06:55 UTC
Created attachment 30868 [details]
many tasks opened after collection removal
Comment 2 Marcel Wiesweg 2009-02-04 21:00:55 UTC
I have fixed all the bugs I encountered when adding/removing a collection and updating the duplicates search list, but I could not reproduce this (neither before nor after the fixes).
Do I need a certain number of duplicates?
If I have a folder with two duplicate pictures that I add/remove as a collection, what to I need to do to trigger this bug?
Comment 3 Andi Clemens 2009-02-04 21:13:25 UTC
I had over 100 duplicate entries, don't know how many Gilles had.
This was a test collection, so the numbers might not be quite accurate in a normal album collection.
I don't know if the number of entries triggered the bug, I will create the collection again and see if it is fixed now.
Comment 4 Andi Clemens 2009-02-04 22:08:07 UTC
It doesn't seem to be fixed.

Gilles,
can you test it again?

Andi
Comment 5 Marcel Wiesweg 2009-02-05 20:30:55 UTC
Well dont expect it to be fixed, I just was trying to reproduce.
No idea so far, all these process are kio_file, where should they come from?
Was there any debug output or .xsession-errors output?
Comment 6 Andi Clemens 2009-02-05 23:40:29 UTC
Created attachment 31005 [details]
error log

This is what I get, nothing helpful I guess...
Comment 7 Marcel Wiesweg 2009-02-09 17:24:54 UTC
SVN commit 923868 by mwiesweg:

Use at most one KIO::PreviewJob per thumbnail thread. KIO goes crazy if more than 150 jobs
are active, which may happen otherwise in special cases.

BUG: 182858

 M  +33 -8     thumbnailloadthread.cpp  
 M  +3 -0      thumbnailloadthread.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=923868