Use at most one KIO::PreviewJob per thumbnail thread. KIO goes crazy if more than 150 jobs are active, which may happen otherwise in special cases.

BUG: 182858

svn path=/trunk/extragear/graphics/digikam/; revision=923868